# customFileTransfer

./: .gitignore  main.py  pyproject.toml  pyvenv.cfg  wsgi.py
auth_app/: auth.py
main_app/: main.py
migrations/versions/: 3c3ff42e3e2c_.py  e413e2063b8f_initial_migrate.py
models/: user_model.py
project/: __init__.py
project/auth_app/: auth.py
project/main_app/: main.py
project/models/: __init__.py  user_model.py
project/templates/: base.html  index.html  login.html  profile.html
templates/: profile.html  signup.html
tests/: conftest.py  test_project.py
