[tool.poetry]
name = "flaskfilemanager"
version = "0.1.0"
description = ""
authors = ["Lesha <Your Email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
bcrypt = "^4.1.1"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
